--- a/Shirwind-live/shirwindLive/Class/Other/BGRefresh/BGHeaderView.xib
+++ b/Shirwind-live/shirwindLive/Class/Other/BGRefresh/BGHeaderView.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="主播正在赶来现场～" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtX-nZ-KyV">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="客官来勒客官来勒～" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtX-nZ-KyV">
                     <rect key="frame" x="143" y="26" width="138" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="0.38823529411764707" green="0.38823529411764707" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -24,7 +24,7 @@
                     <color key="textColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="panda1" translatesAutoresizingMaskIntoConstraints="NO" id="8dV-qU-94s">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="loading1" translatesAutoresizingMaskIntoConstraints="NO" id="8dV-qU-94s">
                     <rect key="frame" x="69" y="4" width="49" height="73"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="73" id="ORZ-qD-ciB"/>
@@ -51,6 +51,6 @@
         </view>
     </objects>
     <resources>
-        <image name="panda1" width="252" height="222"/>
+        <image name="loading1" width="550" height="550"/>
     </resources>
 </document>
