--- a/Shirwind-live/shirwindLive/Class/Home/View/KKLLiveViewController.xib
+++ b/Shirwind-live/shirwindLive/Class/Home/View/KKLLiveViewController.xib
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KKLLiveViewController" customModule="Kouclo_live" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KKLLiveViewController" customModule="ShirwindLive" customModuleProvider="target">
             <connections>
                 <outlet property="iconView" destination="VyC-ad-Tma" id="2ow-dh-A5f"/>
                 <outlet property="peopleCountL" destination="0oc-0D-Np1" id="bSg-2B-egb"/>
@@ -25,29 +22,13 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GsT-CY-g2a">
                     <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mg_room_btn_fenxiang_h" translatesAutoresizingMaskIntoConstraints="NO" id="uUo-eR-LxJ">
-                            <rect key="frame" x="275" y="10" width="40" height="40"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mg_room_btn_liao_h" translatesAutoresizingMaskIntoConstraints="NO" id="lpU-As-zE1">
-                            <rect key="frame" x="10" y="10" width="40" height="40"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mg_room_btn_xinxi_h" translatesAutoresizingMaskIntoConstraints="NO" id="Hk7-Aw-XhZ">
-                            <rect key="frame" x="175" y="10" width="40" height="40"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mg_room_btn_liwu_h" translatesAutoresizingMaskIntoConstraints="NO" id="hZO-b6-ccz">
-                            <rect key="frame" x="225" y="10" width="40" height="40"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uUo-eR-LxJ">
+                            <rect key="frame" x="294" y="31" width="21" height="17.5"/>
                         </imageView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="uUo-eR-LxJ" firstAttribute="leading" secondItem="hZO-b6-ccz" secondAttribute="trailing" constant="10" id="1QN-fo-f8M"/>
-                        <constraint firstItem="Hk7-Aw-XhZ" firstAttribute="centerY" secondItem="lpU-As-zE1" secondAttribute="centerY" id="2Sl-rb-DnZ"/>
-                        <constraint firstItem="hZO-b6-ccz" firstAttribute="leading" secondItem="Hk7-Aw-XhZ" secondAttribute="trailing" constant="10" id="4UW-JL-Yti"/>
-                        <constraint firstItem="lpU-As-zE1" firstAttribute="leading" secondItem="GsT-CY-g2a" secondAttribute="leading" constant="10" id="Dpr-cl-oTQ"/>
                         <constraint firstAttribute="trailing" secondItem="uUo-eR-LxJ" secondAttribute="trailing" constant="60" id="GEE-2v-8NN"/>
                         <constraint firstAttribute="height" constant="60" id="O1v-Fz-3va"/>
-                        <constraint firstItem="hZO-b6-ccz" firstAttribute="centerY" secondItem="lpU-As-zE1" secondAttribute="centerY" id="TBw-KR-2Mp"/>
-                        <constraint firstItem="uUo-eR-LxJ" firstAttribute="centerY" secondItem="lpU-As-zE1" secondAttribute="centerY" id="VJ0-MX-9bq"/>
-                        <constraint firstAttribute="bottom" secondItem="lpU-As-zE1" secondAttribute="bottom" constant="10" id="Yl7-bi-gJ3"/>
                     </constraints>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mg_room_touxiang" translatesAutoresizingMaskIntoConstraints="NO" id="8Ip-ys-Wk7">
@@ -69,17 +50,6 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgl-55-Ve5">
-                    <rect key="frame" x="0.0" y="72" width="150" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="150" id="8nS-Wc-6Y9"/>
-                        <constraint firstAttribute="height" constant="20" id="KBd-ap-590"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <state key="normal" title="映票 8888" backgroundImage="mg_room_映票_底">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="0oc-0D-Np1" firstAttribute="leading" secondItem="VyC-ad-Tma" secondAttribute="trailing" constant="2" id="1h3-4g-bBd"/>
@@ -87,22 +57,15 @@
                 <constraint firstItem="GsT-CY-g2a" firstAttribute="leading" secondItem="nsc-Kr-EpK" secondAttribute="leading" id="Bu4-Qk-b8g"/>
                 <constraint firstItem="8Ip-ys-Wk7" firstAttribute="leading" secondItem="nsc-Kr-EpK" secondAttribute="leading" constant="10" id="EhL-Bj-S2B"/>
                 <constraint firstItem="0oc-0D-Np1" firstAttribute="top" secondItem="nsc-Kr-EpK" secondAttribute="top" constant="48" id="IAW-dK-O3G"/>
-                <constraint firstItem="cgl-55-Ve5" firstAttribute="leading" secondItem="nsc-Kr-EpK" secondAttribute="leading" id="KvN-1A-rEB"/>
                 <constraint firstItem="VyC-ad-Tma" firstAttribute="leading" secondItem="nsc-Kr-EpK" secondAttribute="leading" constant="11" id="U2m-eJ-Iv8"/>
                 <constraint firstItem="VyC-ad-Tma" firstAttribute="top" secondItem="nsc-Kr-EpK" secondAttribute="top" constant="31" id="VGM-IQ-14Q"/>
                 <constraint firstAttribute="trailing" secondItem="GsT-CY-g2a" secondAttribute="trailing" id="bmm-9A-bkS"/>
-                <constraint firstItem="cgl-55-Ve5" firstAttribute="top" secondItem="8Ip-ys-Wk7" secondAttribute="bottom" constant="10" id="xFX-QW-q3s"/>
                 <constraint firstItem="8Ip-ys-Wk7" firstAttribute="top" secondItem="nsc-Kr-EpK" secondAttribute="top" constant="30" id="zcB-rx-lmb"/>
             </constraints>
             <point key="canvasLocation" x="12" y="129"/>
         </view>
     </objects>
     <resources>
-        <image name="mg_room_btn_fenxiang_h" width="40" height="40"/>
-        <image name="mg_room_btn_liao_h" width="40" height="40"/>
-        <image name="mg_room_btn_liwu_h" width="40" height="40"/>
-        <image name="mg_room_btn_xinxi_h" width="40" height="40"/>
-        <image name="mg_room_touxiang" width="87" height="32"/>
-        <image name="mg_room_映票_底" width="138" height="22"/>
+        <image name="mg_room_touxiang" width="87.5" height="32"/>
     </resources>
 </document>
