--- a/web/templates/admin/presentList.html
+++ b/web/templates/admin/presentList.html
@@ -15,7 +15,7 @@
 
                 <div class="form-group">
                     <div class="input-group">
-                        <input type="text" name="mix_kw" placeholder="请输入搜索字段" class="form-control" value="{{ search_con['mix_kw'] }}">
+                        <input type="text" name="mix_kw" placeholder="请输入查找字段" class="form-control" value="{{ search_con['mix_kw'] }}">
                         <input type="hidden" name="p" value="{{ search_con['p'] }}">
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-primary search">
@@ -27,16 +27,22 @@
 
             </div>
             <hr>
-
+            <div class="row">
+                <div class="col-lg-12">
+                    <a class="btn btn-w-m btn-outline btn-primary pull-right"
+                       href="{{ buildUrl('/admin/presentAdd') }}">
+                        <i class="fa fa-plus"></i>礼物
+                    </a>
+                </div>
+            </div>
 
         </form>
         <table class="table table-bordered m-t">
             <thead>
             <tr>
                 <th>序号</th>
-                <th>姓名</th>
-                <th>关注数量</th>
-                <th>粉丝数量</th>
+                <th>礼物名字</th>
+                <th>金钱</th>
                 <th>操作</th>
             </tr>
             </thead>
@@ -44,17 +50,19 @@
             {% if list %}
                 {% for item in list %}
             <tr>
-                <td>{{ item.uid  }}</td>
-                <td>{{ item.nickname  }}</td>
-                <td>{{ item.fansNumber  }}</td>
-                <td>{{ item.followNumber }}</td>
+                <td>{{ item.presentId  }}</td>
+                <td>{{ item.prsentName  }}</td>
+                <td>{{ item.money  }}</td>
                 <td>
+                    <a href="{{ buildUrl('/admin/presentAdd' ) }}?presentId={{ item.presentId  }}">
+                        <i class="fa fa-eye fa-lg"></i>
+                    </a>
                     {%  if item.status == 1 %}
-                    <a class="m-l remove" href="javascript:void(0);" data="{{ item.uid  }}">
+                    <a class="m-l remove" href="javascript:void(0);" data="{{ item.presentId  }}">
                         <i class="fa fa-trash fa-lg"></i>
                     </a>
                     {% else %}
-                       <a class="m-l recover" href="javascript:void(0);" data="{{ item.uid  }}">
+                       <a class="m-l recover" href="javascript:void(0);" data="{{ item.presentId  }}">
                         <i class="fa fa-rotate-left fa-lg"></i>
                     </a>
                     {% endif %}
@@ -72,5 +80,5 @@
 </div>
 {% endblock %}
 {% block js %}
-<script src="{{ buildStaticUrl('/js/admin/account.js') }}"></script>
+<script src="{{ buildStaticUrl('/js/admin/present.js') }}"></script>
 {% endblock %}
